added game statistics api
